--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "test.js",
   "dependencies": {
+    "johnny-five": "^0.9.19",
     "express": "^4.13.4",
     "socket.io": "^1.4.5"
   },
